--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* full viewport height */
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -122,7 +122,7 @@ button:hover { background: #f6e05e; }
   background: rgba(255, 255, 224, 0.95);
   border: 3px solid #ffcc00;
   border-radius: 18px;
-  padding: 15px;
+  padding: 15px 45px 15px 15px; /* extra right padding to avoid overlap with menu */
   margin-bottom: 15px;
   word-wrap: break-word;
   box-shadow: 0px 4px 10px rgba(0,0,0,0.15);
@@ -145,7 +145,7 @@ button:hover { background: #f6e05e; }
 .menu-options {
   display: none;
   position: absolute;
-  bottom: 10px;
+  top: 30px; /* appear below button */
   right: 10px;
   background: #ffcc00;
   border-radius: 15px;
@@ -184,7 +184,7 @@ button:hover { background: #f6e05e; }
   textarea { height: 120px; font-size: 14px; }
   button { padding: 10px 20px; font-size: 15px; }
   .panel { padding: 20px; border-radius: 20px; }
-  .entry { padding: 12px; border-radius: 15px; }
+  .entry { padding: 12px 40px 12px 12px; border-radius: 15px; }
   .remove-img { width: 25px; height: 25px; font-size: 14px; }
 }
 @media (min-width: 601px) and (max-width: 900px) {
@@ -224,15 +224,9 @@ button:hover { background: #f6e05e; }
 </div>
 
 <!-- Audio files -->
-<audio id="sound1" preload="auto">
-  <source src="https://www.myinstants.com/media/sounds/spongebob-bubble.mp3" type="audio/mpeg">
-</audio>
-<audio id="sound2" preload="auto">
-  <source src="https://www.myinstants.com/media/sounds/spongebob-laugh.mp3" type="audio/mpeg">
-</audio>
-<audio id="sound3" preload="auto">
-  <source src="https://www.myinstants.com/media/sounds/spongebob-fail.mp3" type="audio/mpeg">
-</audio>
+<audio id="sound1" preload="auto"><source src="https://www.myinstants.com/media/sounds/spongebob-bubble.mp3" type="audio/mpeg"></audio>
+<audio id="sound2" preload="auto"><source src="https://www.myinstants.com/media/sounds/spongebob-laugh.mp3" type="audio/mpeg"></audio>
+<audio id="sound3" preload="auto"><source src="https://www.myinstants.com/media/sounds/spongebob-fail.mp3" type="audio/mpeg"></audio>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
