--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ button:hover {
   gap: 12px;
   position: relative;
   z-index: 1;
-  max-height: 400px;
+  max-height: 70vh;
   overflow-y: auto;
 }
 
@@ -172,7 +172,9 @@ button:hover {
   box-shadow: 0px 4px 14px rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: visible;
+  word-break: break-word;
+  white-space: pre-line;
   transition: transform 0.2s;
 }
 .entry:hover { transform: translateY(-2px); }
@@ -226,7 +228,26 @@ button:hover {
 
 /* Mobile adjustments */
 @media (max-width: 600px) {
-  .panel { width: 100%; height: 100vh; border-radius: 0; padding: 15px; overflow-y: auto; }
+  .panel#entriesPanel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    min-width: 0;
+    border-radius: 0;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    overflow-y: auto;
+    z-index: 100;
+  }
+  .entries {
+    max-height: calc(100vh - 60px);
+    padding-bottom: 10px;
+  }
+  .panel { width: 100vw; min-width: 0; max-width: 100vw; height: auto; border-radius: 0; padding: 10px 5px; margin-bottom: 10px; box-sizing: border-box; overflow-y: visible; }
   button { padding: 15px; font-size: 16px; }
   .button-row button { margin: 0 2px; }
 }
