--- a/index.html
+++ b/index.html
@@ -229,22 +229,20 @@ button:hover {
 /* Mobile adjustments */
 @media (max-width: 600px) {
   .panel#entriesPanel {
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: static;
     width: 100vw;
-    height: 100vh;
+    height: auto;
     max-width: 100vw;
     min-width: 0;
     border-radius: 0;
     padding: 0;
-    margin: 0;
+    margin: 0 0 10px 0;
     box-sizing: border-box;
-    overflow-y: auto;
-    z-index: 100;
+    overflow-y: visible;
+    z-index: 1;
   }
   .entries {
-    max-height: calc(100vh - 60px);
+    max-height: 60vh;
     padding-bottom: 10px;
   }
   .panel { width: 100vw; min-width: 0; max-width: 100vw; height: auto; border-radius: 0; padding: 10px 5px; margin-bottom: 10px; box-sizing: border-box; overflow-y: visible; }
